--- a/reference.bib
+++ b/reference.bib
@@ -35,7 +35,6 @@
   year      = {2018}
 }
 
-
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -45,6 +44,7 @@
   number  = {3}
 }
 
+
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -53,7 +53,6 @@
   volume  = {29},
   number  = {2}
 }
-
 
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
@@ -98,13 +97,13 @@
   number  = {12}
 }
 
+
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
-
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -114,7 +113,6 @@
 }
 
 
-
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
   booktitle = CVPR,
@@ -122,13 +120,14 @@
   year      = {2019}
 }
 
+
+
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
   author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
@@ -152,6 +151,7 @@
   booktitle = {SODA},
   year      = {2007}
 }
+
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -177,7 +177,6 @@
   booktitle = CVPR,
   year      = {2020}
 }
-
 
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
@@ -214,13 +213,13 @@
   year    = {2016}
 }
 
+
 @article{Ba2016,
   title   = {Layer normalization},
   author  = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
   journal = {arXiv preprint arXiv:1607.06450},
   year    = {2016}
 }
-
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -232,8 +231,6 @@
 }
 
 
-
-  
 @book{Baerentzen2002,
   title     = {Manipulation of volumetric solids with applications to sculpting},
   author    = {B{\ae}rentzen, J Andreas},
@@ -242,13 +239,14 @@
 
 
 
-
+  
 @inproceedings{Bai2016,
   author    = {Song Bai and Xiang Bai and Zhichao Zhou and Zhaoxiang Zhang and Longin Jan Latecki},
   title     = {GIFT: A real-time and scalable {3D} shape search engine},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 
 
@@ -259,6 +257,8 @@
   year      = {2021}
 }
 
+
+
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
   title   = {Fast and Deep Deformation Approximations},
@@ -267,7 +267,6 @@
   number  = {4},
   journal = SIG
 }
-
 
 @article{Bailey2020,
   title   = {Fast and deep facial deformations},
@@ -278,6 +277,7 @@
   year    = {2020}
 }
 
+
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
   title   = {Anisotropic diffusion of surfaces and functions on surfaces},
@@ -287,14 +287,14 @@
   number  = {1}
 }
 
-
-
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
   author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
   journal = {arXiv preprint arXiv:1806.01261},
   year    = {2018}
 }
+
+
 
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
@@ -318,8 +318,6 @@
   booktitle = {SGP}
 }
 
-
-
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
   journal = TPAMI,
@@ -341,6 +339,7 @@
 }
 
 
+
 @article{Bernardini1999,
   title   = {The ball-pivoting algorithm for surface reconstruction},
   author  = {Bernardini, Fausto and Mittleman, Joshua and Rushmeier, Holly and Silva, Cl{\'a}udio and Taubin, Gabriel},
@@ -351,7 +350,6 @@
 }
 
 
-
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
   title   = {A method for registration of {3D} shapes},
@@ -360,6 +358,7 @@
   volume  = {14},
   number  = {2}
 }
+
 
 
 @inproceedings{Bogo2014,
@@ -408,7 +407,6 @@
 }
 
 
-
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
   title   = {Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks},
@@ -417,6 +415,8 @@
   volume  = {34},
   number  = {5}
 }
+
+
 
 @inproceedings{Boscaini2016,
   author    = {Boscaini, Davide and Masci, Jonathan and Rodol\`a, Emanuele and Bronstein, Michael M.},
@@ -440,7 +440,6 @@
   publisher = {CRC press},
   year      = {2010}
 }
-
 
 @article{Boulch2016,
   author  = {Boulch, Alexandre and Marlet, Renaud},
@@ -475,13 +474,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Brody2022,
   title     = {How Attentive are Graph Attention Networks? },
   author    = {Shaked Brody and Uri Alon and Eran Yahav},
   booktitle = ICLR,
   year      = {2022}
 }
-
 
 @article{Bronstein2017,
   author  = {M. M. Bronstein and J. Bruna and Y. LeCun and A. Szlam and P. Vandergheynst},
@@ -561,6 +560,7 @@
   year      = {2018}
 }
 
+
 @article{Carroll1998,
   title     = {Multidimensional scaling},
   author    = {Carroll, J. Douglas and Arabie, Phipps},
@@ -568,7 +568,6 @@
   year      = {1998},
   publisher = {Elsevier}
 }
-
 
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
@@ -840,13 +839,13 @@
   year   = {2018}
 }
 
+
 @inproceedings{Cordonnier2020,
   title     = {On the relationship between self-attention and convolutional layers},
   author    = {Cordonnier, Jean-Baptiste and Loukas, Andreas and Jaggi, Martin},
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Cornea2007,
   author  = {Cornea, Nicu D. and Silver, Deborah and Min, Patrick},
@@ -875,6 +874,7 @@
   year    = {2013}
 }
 
+
 @article{Crane2017,
   author  = {Crane, Keenan and Weischedel, Clarisse and Wardetzky, Max},
   title   = {The Heat Method for Distance Computation},
@@ -883,7 +883,6 @@
   number  = {11},
   year    = {2017}
 }
-
 
 @article{Crane2020,
   title   = {A survey of algorithms for geodesic paths and distances},
@@ -942,13 +941,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Dai2018a,
   title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
   author    = {Dai, Angela and Nie{\ss}ner, Matthias},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
@@ -967,6 +966,7 @@
   year      = {2009}
 }
 
+
 @inproceedings{Deng2018,
   title     = {{PPF-FoldNet}: Unsupervised learning of rotation invariant 3D local descriptors},
   author    = {Deng, Haowen and Birdal, Tolga and Ilic, Slobodan},
@@ -981,13 +981,13 @@
   year      = {1999}
 }
 
-
 @article{Devlin2018,
   author  = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
   journal = {arXiv preprint arXiv:1810.04805},
   title   = {{BERT}: Pre-training of deep bidirectional transformers for language understanding},
   year    = {2018}
 }
+
 
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
@@ -998,13 +998,13 @@
   number  = {1}
 }
 
-
 @inproceedings{Doersch2015,
   author    = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
   booktitle = ICCV,
   title     = {Unsupervised visual representation learning by context prediction},
   year      = {2015}
 }
+
 
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
@@ -1021,7 +1021,6 @@
   year      = {2022}
 }
 
-
 @inproceedings{Dosovitskiy2014,
   title     = {Discriminative unsupervised feature learning with convolutional neural networks},
   author    = {Dosovitskiy, Alexey and Springenberg, Jost Tobias and Riedmiller, Martin and Brox, Thomas},
@@ -1036,6 +1035,7 @@
   booktitle = ICLR,
   year      = {2021}
 }
+
 
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
@@ -1127,13 +1127,13 @@
   year      = {2022}
 }
 
-
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
   title     = {Filter forests for learning data-dependent convolutional kernels},
   booktitle = CVPR,
   year      = {2014}
 }
+
 
 @inproceedings{Feng2019,
   title     = {{MeshNet}: Mesh Neural Network for {3D} Shape Representation},
@@ -1142,13 +1142,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
@@ -1203,7 +1203,6 @@
   year      = {2000}
 }
 
-
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
   title   = {Floating scale surface reconstruction},
@@ -1212,6 +1211,7 @@
   volume  = {33},
   number  = {4}
 }
+
 
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
@@ -1235,13 +1235,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Garland1997,
   title     = {Surface simplification using quadric error metrics},
   author    = {Garland, Michael and Heckbert, Paul S},
   booktitle = {SIGGRAPH},
   year      = {1997}
 }
+
 
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
@@ -1410,7 +1410,6 @@
   primaryclass  = {cs.CV}
 }
 
-
 @article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
   author  = {Guo, Meng-Hao and Cai, Jun-Xiong and Liu, Zheng-Ning and Mu, Tai-Jiang and Martin, Ralph R and Hu, Shi-Min},
@@ -1419,6 +1418,7 @@
   number  = {2},
   year    = {2021}
 }
+
 
 @inproceedings{Gupta2016,
   author    = {Gupta, Saurabh and Hoffman, Judy and Malik, Jitendra},
@@ -1455,14 +1455,13 @@
   year      = {2017}
 }
 
-
-
 @inproceedings{Hadsell2006,
   author    = {Raia Hadsell and Sumit Chopra and Yann LeCun},
   title     = {Dimensionality reduction by learning an invariant mapping},
   booktitle = CVPR,
   year      = 2006
 }
+
 
 
 @inproceedings{Haene2017,
@@ -1472,13 +1471,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Hamilton2017,
   author    = {Hamilton, Will and Ying, Zhitao and Leskovec, Jure},
   booktitle = NeurIPS,
   title     = {Inductive Representation Learning on Large Graphs},
   year      = {2017}
 }
-
 
 @inproceedings{Han2017,
   author    = {Xiaoguang Han and Zhen Li and Haibin Huang and Evangelos Kalogerakis and Yizhou Yu},
@@ -1497,6 +1496,7 @@
   number  = {4}
 }
 
+
 @article{Han2019,
   author  = {Han, Zhizhong and Lu, Honglei and Liu, Zhenbao and Vong, Chi-Man and Liu, Yu-Shen and Zwicker, Matthias and Han, Junwei and Chen, CL Philip},
   journal = {IEEE Transactions on Image Processing},
@@ -1512,7 +1512,6 @@
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @article{Hanocka2019,
   author  = {Hanocka, Rana and Hertz, Amir and Fish, Noa and Giryes, Raja and Fleishman, Shachar and Cohen-Or, Daniel},
@@ -1532,6 +1531,7 @@
   number  = {4},
   journal = SIG
 }
+
 
 @article{Harary2014,
   author  = {Harary, Gur and Tal, Ayellet and Grinspun, Eitan},
@@ -1749,7 +1749,6 @@
   articleno = {20}
 }
 
-
 @inproceedings{Izadi2011,
   author    = {Izadi, Shahram and Kim, David and Hilliges, Otmar and Molyneaux, David and Newcombe, Richard and Kohli, Pushmeet and Shotton, Jamie and Hodges, Steve and Freeman, Dustin and Davison, Andrew and Fitzgibbon, Andrew},
   title     = {{KinectFusion}: real-time {3D} reconstruction and interaction using a moving depth camera},
@@ -1772,6 +1771,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @inproceedings{Jia2014,
   author    = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
@@ -1906,7 +1906,6 @@
   number  = {4}
 }
 
-
 @article{Kalogerakis2010,
   author  = {Kalogerakis, Evangelos and Hertzmann, Aaron and Singh, Karan},
   title   = {Learning {3D} mesh segmentation and labeling},
@@ -1923,6 +1922,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Kanezaki2018,
   author    = {Asako Kanezaki and Yasuyuki Matsushita and Yoshifumi Nishida},
@@ -1975,7 +1975,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Kazhdan2003,
   title     = {Rotation invariant spherical harmonic representation of {3D} shape descriptors},
   author    = {Kazhdan, Michael and Funkhouser, Thomas and Rusinkiewicz, Szymon},
@@ -1991,6 +1990,7 @@
   title     = {Poisson surface reconstruction},
   year      = {2006}
 }
+
 
 @article{Kazhdan2013,
   author  = {Kazhdan, Michael and Hoppe, Hugues},
@@ -2145,7 +2145,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Lai2005,
   author    = {Lai, Y.-K. and Hu, S.-M. and Gu, D. X. and Martin, R. R.},
   title     = {Geometric texture synthesis and transfer via geometry images},
@@ -2153,6 +2152,7 @@
   year      = {2005},
   series    = {SPM '05}
 }
+
 
 @inproceedings{Lai2022,
   title     = {Stratified Transformer for {3D} Point Cloud Segmentation},
@@ -2496,6 +2496,13 @@
   title     = {Fully convolutional models for semantic segmentation},
   booktitle = CVPR,
   year      = {2015}
+}
+
+@article{Loop1987,
+  title   = {Smooth subdivision surfaces based on triangles},
+  author  = {Loop, Charles},
+  journal = {Thesis, University of Utah},
+  year    = {1987}
 }
 
 @inproceedings{Lorensen1987,
