--- a/reference.bib
+++ b/reference.bib
@@ -974,6 +974,16 @@
   year      = {2018}
 }
 
+
+@inproceedings{Deng2021,
+  title     = {Vector neurons: A general framework for {SO(3)}-equivariant networks},
+  author    = {Deng, Congyue and Litany, Or and Duan, Yueqi and Poulenard, Adrien and Tagliasacchi, Andrea and Guibas, Leonidas J.},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
+
+
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
   title     = {Implicit fairing of irregular meshes using diffusion and curvature flow},
@@ -2572,6 +2582,15 @@
   year    = {2008}
 }
 
+@article{Maehara2013,
+  title   = {Euclidean embeddings of finite metric spaces},
+  author  = {Maehara, Hiroshi},
+  journal = {Discrete Mathematics},
+  volume  = {313},
+  number  = {23},
+  year    = {2013}
+}
+
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
   title     = {Feature detection on {3D} face surfaces for pose normalisation and recognition},
@@ -2619,6 +2638,7 @@
   year      = {2012}
 }
 
+
 @inproceedings{Masci2015,
   author    = {Jonathan Masci and Davide Boscaini and Michael M. Bronstein and Pierre Vandergheynst},
   title     = {Geodesic convolutional neural networks on Riemannian manifolds},
@@ -2633,7 +2653,6 @@
   booktitle = IROS,
   year      = {2015}
 }
-
 
 @article{Meagher1982,
   author  = {Donald Meagher},
@@ -2651,6 +2670,7 @@
   volume  = {28},
   number  = {5}
 }
+
 
 @article{Memoli2001,
   title   = {Fast computation of weighted distance functions and geodesics on implicit hyper-surfaces},
@@ -2671,7 +2691,6 @@
   year    = {2005}
 }
 
-
 @inproceedings{Mescheder2019,
   title     = {Occupancy networks: Learning {3D} reconstruction in function space},
   author    = {Mescheder, Lars and Oechsle, Michael and Niemeyer, Michael and Nowozin, Sebastian and Geiger, Andreas},
@@ -2686,13 +2705,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Misra2021,
   title     = {An End-to-End Transformer Model for {3D} Object Detection},
   author    = {Misra, Ishan and Girdhar, Rohit and Joulin, Armand},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Mitchell1987,
   author  = {Mitchell, Joseph S. B. and Mount, David M. and Papadimitriou, Christos H.},
@@ -2702,6 +2721,7 @@
   journal = {SIAM Journal on Computing},
   year    = {1987}
 }
+
 
 @inproceedings{Mitra2014,
   author    = {Mitra, Niloy J. and Wand, Michael and Zhang, Hao (Richard) and Cohen-Or, Daniel and Kim, Vladimir and Huang, Qi-Xing},
@@ -2718,13 +2738,13 @@
   year         = {2020}
 }
 
-
 @inproceedings{Mo2019,
   author    = {Mo, Kaichun and Zhu, Shilin and Chang, Angel X and Yi, Li and Tripathi, Subarna and Guibas, Leonidas J. and Su, Hao},
   title     = {{PartNet}: A Large-scale Benchmark for Fine-grained and Hierarchical Part-level {3D} Object Understanding},
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @inproceedings{Monti2017,
   author    = {Federico Monti and Davide Boscaini and Jonathan Masci and Emanuele Rodol\`{a} and Jan Svoboda and Michael M. Bronstein},
@@ -2742,7 +2762,6 @@
   volume  = {33},
   number  = {5}
 }
-
 
 @article{Moon2015,
   author  = {Moon, Bochang and Iglesias-Guitian, Jose A. and Yoon, Sung-Eui and Mitchell, Kenny},
@@ -2965,6 +2984,13 @@
   year      = {2004}
 }
 
+@article{Pressley2010,
+  title   = {Gauss’ theorema egregium},
+  author  = {Pressley, Andrew and Pressley, Andrew},
+  journal = {Elementary differential geometry},
+  year    = {2010}
+}
+
 @inproceedings{Qi2016,
   author    = {Charles R. Qi and Hao Su and Matthias Nie{\ss}ner and Angela Dai and Mengyuan Yan and Leonidas J. Guibas},
   title     = {Volumetric and multi-view {CNNs} for object classification on {3D} data},
@@ -3109,6 +3135,7 @@
   year      = {2015}
 }
 
+
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
   journal = {arXiv preprint arXiv:1711.10108},
@@ -3116,13 +3143,13 @@
   year    = {2017}
 }
 
+
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
   title     = {Fully-Convolutional Point Networks for Large-Scale Point Clouds},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @article{Reuter2010,
   author  = {Reuter, Martin},
@@ -3133,13 +3160,13 @@
   number  = {2-3}
 }
 
-
 @inproceedings{Riegler2017,
   author    = {Gernot Riegler and Ali Osman Ulusoy and Andreas Geiger},
   title     = {{OctNet}: Learning deep {3D} representations at high resolutions},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Riegler2017a,
   author    = {Riegler, Gernot and Ulusoy, Ali Osman and Bischof, Horst and Geiger, Andreas},
@@ -3148,6 +3175,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Ronneberger2015,
   author    = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
   booktitle = {International Conference on Medical image computing and computer-assisted intervention},
@@ -3155,14 +3183,12 @@
   year      = {2015}
 }
 
-
 @inproceedings{Roufosse2019,
   author    = {Jean-Michel Roufosse and Abhishek Sharma and Maks Ovsjanikov},
   title     = {Unsupervised deep learning for structured shape matching},
   booktitle = ICCV,
   year      = 2019
 }
-
 
 @article{Rousseeuw1987,
   author  = {Peter J. Rousseeuw},
@@ -3301,6 +3327,17 @@
   year    = {1999}
 }
 
+
+@article{Shamai2018,
+  title   = {Efficient inter-geodesic distance computation and fast classical scaling},
+  author  = {Shamai, Gil and Zibulevsky, Michael and Kimmel, Ron},
+  journal = TPAMI,
+  volume  = {42},
+  number  = {1},
+  year    = {2018}
+}
+
+
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -3345,7 +3382,6 @@
   number  = {3}
 }
 
-
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -3354,7 +3390,6 @@
   number  = {3},
   year    = {2007}
 }
-
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -3386,6 +3421,7 @@
   year    = {2020}
 }
 
+
 @article{Shen2004,
   author  = {Yuzhong Shen and Barner, K.E.},
   title   = {Fuzzy vector median-based surface smoothing},
@@ -3394,6 +3430,7 @@
   volume  = {10},
   number  = {3}
 }
+
 
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
@@ -3436,7 +3473,6 @@
   year    = {2019}
 }
 
-
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shi-Qing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
   title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
@@ -3444,7 +3480,6 @@
   year    = {2016},
   volume  = {43}
 }
-
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -3490,6 +3525,7 @@
   year    = {2018}
 }
 
+
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
@@ -3503,6 +3539,7 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -3528,14 +3565,12 @@
   year    = {2014}
 }
 
-
 @inproceedings{Song2015,
   title     = {{SUN RGB-D}: A {RGB-D} scene understanding benchmark suite},
   author    = {Song, Shuran and Lichtenberg, Samuel P and Xiao, Jianxiong},
   booktitle = CVPR,
   year      = {2015}
 }
-
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -3568,6 +3603,7 @@
   number  = {1}
 }
 
+
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
   booktitle = CVPR,
@@ -3581,6 +3617,7 @@
   booktitle = ICCV,
   year      = {2015}
 }
+
 
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
@@ -3606,7 +3643,6 @@
   number  = {5}
 }
 
-
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
   title   = {Fast and effective feature-preserving mesh denoising},
@@ -3615,7 +3651,6 @@
   volume  = {13},
   number  = {5}
 }
-
 
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
@@ -3659,6 +3694,7 @@
   year      = {2022}
 }
 
+
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas J.},
   title   = {Data-driven structural priors for shape completion},
@@ -3667,6 +3703,7 @@
   volume  = {34},
   number  = {6}
 }
+
 
 @article{Surazhsky2005,
   author  = {Surazhsky, Vitaly and Surazhsky, Tatiana and Kirsanov, Danil and Gortler, Steven J and Hoppe, Hugues},
@@ -3686,14 +3723,12 @@
   number  = {5}
 }
 
-
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
-
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -3739,6 +3774,7 @@
   year      = {2021}
 }
 
+
 @article{Tao2019,
   title   = {Parallel and scalable heat methods for geodesic distance computation},
   author  = {Tao, Jiong and Zhang, Juyong and Deng, Bailin and Fang, Zheng and Peng, Yue and He, Ying},
@@ -3747,6 +3783,7 @@
   number  = {2},
   year    = {2019}
 }
+
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -3764,14 +3801,12 @@
   year      = {2002}
 }
 
-
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3800,6 +3835,7 @@
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
@@ -3832,6 +3868,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
   title     = {Learning shape abstractions by assembling volumetric primitives},
@@ -3845,7 +3882,6 @@
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
@@ -3861,6 +3897,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Vallet2008,
   title   = {Spectral geometry processing with manifold harmonics},
@@ -3878,7 +3915,6 @@
   year      = {2017}
 }
 
-
 @article{Velickovic2017,
   title   = {Graph attention networks},
   author  = {Velickovic, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Lio, Pietro and Bengio, Yoshua},
@@ -3888,7 +3924,6 @@
   year    = {2017}
 }
 
-
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
   author    = {Veli{\v{c}}kovi{\'{c}}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Li{\`{o}}, Pietro and Bengio, Yoshua},
@@ -3896,12 +3931,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{Vincent2008,
   title     = {Extracting and composing robust features with denoising autoencoders},
   author    = {Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
   booktitle = ICML,
   year      = {2008}
 }
+
 
 @inproceedings{Wald2019,
   author    = {Wald, Johanna and Avetisyan, Armen and Navab, Nassir and Tombari, Federico and Nie{\ss}ner, Matthias},
@@ -3919,7 +3956,6 @@
   number  = {7}
 }
 
-
 @article{Wang2014,
   author  = {Wang, Ruimin and Yang, Zhouwang and Liu, Ligang and Deng, Jiansong and Chen, Falai},
   title   = {Decoupling noise and features via weighted $l_1$-analysis compressed sensing},
@@ -3928,7 +3964,6 @@
   volume  = {33},
   number  = {2}
 }
-
 
 @article{Wang2015,
   author  = {Wang, Peng-Shuai and Fu, Xiao-Ming and Liu, Yang and Tong, Xin and Liu, Shi-Lin and Guo, Baining},
@@ -4100,6 +4135,7 @@
   number  = {4}
 }
 
+
 @article{Wang2022a,
   title   = {{PVT} v2: Improved baselines with pyramid vision transformer},
   author  = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
@@ -4108,6 +4144,7 @@
   number  = {3},
   year    = {2022}
 }
+
 
 @inproceedings{Wang2022b,
   title     = {{CAGroup3D}: Class-aware grouping for {3D} object detection on point clouds},
@@ -4121,6 +4158,13 @@
   title  = {{3D Warehouse}},
   year   = {2018},
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
+}
+
+@article{Weber2008,
+  title   = {Parallel algorithms for approximation of distance maps on parametric surfaces},
+  author  = {Weber, Ofir and Devir, Yohai S and Bronstein, Alexander M and Bronstein, Michael M and Kimmel, Ron},
+  journal = TOG,
+  year    = {2008}
 }
 
 @article{Wei2015,
@@ -4147,6 +4191,7 @@
   howpublished = {\url{https://github.com/rwightman/pytorch-image-models}}
 }
 
+
 @article{Wilhelms1992,
   author  = {Wilhelms, Jane and Van Gelder, Allen},
   title   = {Octrees for faster isosurface generation},
@@ -4155,6 +4200,7 @@
   volume  = {11},
   number  = {3}
 }
+
 
 @inproceedings{Williams2021,
   title     = {Neural splines: Fitting {3D} surfaces with infinitely-wide neural networks},
@@ -4170,7 +4216,6 @@
   year      = {2022}
 }
 
-
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
   title   = {Structure recovery via hybrid variational surface approximation},
@@ -4179,7 +4224,6 @@
   volume  = {24},
   number  = {3}
 }
-
 
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
@@ -4225,6 +4269,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Wu2018d,
   title     = {Group normalization},
   author    = {Wu, Yuxin and He, Kaiming},
@@ -4247,7 +4292,6 @@
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
-
 
 @article{Wu2020,
   title   = {A comprehensive survey on graph neural networks},
@@ -4272,12 +4316,14 @@
   year      = {2022}
 }
 
+
 @article{Xia2021,
   author  = {Xia, Qianwei and Zhang, Juyong and Fang, Zheng and Li, Jin and Zhang, Mingyue and Deng, Bailin and He, Ying},
   title   = {{GeodesicEmbedding (GE)}: a high-dimensional embedding approach for fast geodesic distance queries},
   journal = TVCG,
   year    = {2021}
 }
+
 
 @inproceedings{Xiao2021,
   title     = {Early convolutions help transformers see better},
@@ -4295,14 +4341,12 @@
   number  = {7}
 }
 
-
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
   author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J. and Litany, Or},
   journal = ECCV,
   year    = {2020}
 }
-
 
 @inproceedings{Xie2020a,
   title     = {{MLCVNet}: Multi-level context votenet for {3D} object detection},
@@ -4365,12 +4409,14 @@
   number  = {6}
 }
 
+
 @inproceedings{Xu2014,
   author    = {Xu, Hongyi and Barbi\v{c}, Jernej},
   title     = {Signed Distance Fields for Polygon Soup Meshes},
   year      = {2014},
   booktitle = {Proceedings of Graphics Interface}
 }
+
 
 @inproceedings{Xu2015,
   author    = {Li Xu and Jimmy SJ. Ren and Qiong Yan and Renjie Liao and Jiaya Jia},
@@ -4387,7 +4433,6 @@
   volume  = {36},
   number  = {1}
 }
-
 
 @article{Xu2015b,
   title   = {Fast wavefront propagation {(FWP)} for computing exact geodesic distances on meshes},
@@ -4406,12 +4451,14 @@
   year      = {2018}
 }
 
+
 @article{Xu2018a,
   title   = {How powerful are graph neural networks?},
   author  = {Xu, Keyulu and Hu, Weihua and Leskovec, Jure and Jegelka, Stefanie},
   journal = {arXiv preprint arXiv:1810.00826},
   year    = {2018}
 }
+
 
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
@@ -4420,14 +4467,12 @@
   year      = {2021}
 }
 
-
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
   booktitle = {Geom. Model. and Proc.},
   year      = {2002}
 }
-
 
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
@@ -4459,7 +4504,6 @@
   year    = {2020}
 }
 
-
 @inproceedings{Yan2020a,
   title     = {{PointASNL}: Robust point clouds processing using nonlocal neural networks with adaptive sampling},
   author    = {Yan, Xu and Zheng, Chaoda and Li, Zhen and Wang, Sheng and Cui, Shuguang},
@@ -4490,12 +4534,14 @@
   year      = {2017}
 }
 
+
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
   journal = TPAMI,
   year    = {2018}
 }
+
 
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
@@ -4504,6 +4550,7 @@
   year      = {2018}
 }
 
+
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
@@ -4511,14 +4558,12 @@
   year    = {2020}
 }
 
-
 @inproceedings{Yang2021,
   title     = {Focal Self-attention for Local-Global Interactions in Vision Transformers},
   author    = {Jianwei Yang and Chunyuan Li and Pengchuan Zhang and Xiyang Dai and Bin Xiao and Lu Yuan and Jianfeng Gao},
   year      = {2021},
   booktitle = NeurIPS
 }
-
 
 @inproceedings{Yen2007,
   title     = {Graph nodes clustering based on the commute-time kernel},
@@ -4537,6 +4582,7 @@
   number  = {6}
 }
 
+
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
   title        = {Large-scale {3D} shape reconstruction and segmentation from {ShapeNetCore55}},
@@ -4553,14 +4599,12 @@
   number  = {4}
 }
 
-
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas J. Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
@@ -4580,6 +4624,7 @@
   year    = {2013}
 }
 
+
 @article{Ying2014,
   title   = {{Parallel Chen-Han (PCH)} algorithm for discrete geodesics},
   author  = {Ying, Xiang and Xin, Shi-Qing and He, Ying},
@@ -4596,6 +4641,7 @@
   year      = {2018}
 }
 
+
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh editing with Poisson-based gradient field manipulation},
@@ -4604,7 +4650,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
@@ -4628,6 +4673,7 @@
   year      = {2021}
 }
 
+
 @inproceedings{Yu2022,
   title     = {{Point-BERT}: Pre-training {3D} point cloud transformers with masked point modeling},
   author    = {Yu, Xumin and Tang, Lulu and Rao, Yongming and Huang, Tiejun and Zhou, Jie and Lu, Jiwen},
@@ -4650,7 +4696,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
   title     = {Surface feature detection and description with applications to mesh matching},
@@ -4664,7 +4709,6 @@
   booktitle = ECCV,
   year      = {2014}
 }
-
 
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
@@ -4772,6 +4816,7 @@
   year      = {2021}
 }
 
+
 @article{Zhang2021a,
   title   = {{PVT}: Point-Voxel Transformer for {3D} Deep Learning},
   author  = {Zhang, Cheng and Wan, Haocheng and Liu, Shengqiang and Shen, Xinyi and Wu, Zizhao},
@@ -4793,12 +4838,18 @@
   year      = {2022}
 }
 
-
 @inproceedings{Zhang2022a,
   title     = {{3DILG}: Irregular latent grids for {3D} generative modeling},
   author    = {Zhang, Biao and Nie{\ss}ner, Matthias and Wonka, Peter},
   booktitle = NeurIPS,
   year      = {2022}
+}
+
+@article{Zhang2023,
+  title   = {{NeuroGF}: A Neural Representation for Fast Geodesic Distance and Path Queries},
+  author  = {Zhang, Qijian and Hou, Junhui and Adikusuma, Yohanes Yudhi and Wang, Wenping and He, Ying},
+  journal = {arXiv preprint arXiv:2306.00658},
+  year    = {2023}
 }
 
 @inproceedings{Zhao2019,
@@ -4814,6 +4865,7 @@
   title     = {Object Detection with a Unified Label Space from Multiple Datasets},
   year      = {2020}
 }
+
 
 @inproceedings{Zhao2021,
   title     = {Point transformer},
@@ -4844,7 +4896,6 @@
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Zhou2006,
   author  = {Zhou, Kun and Huang, Xin and Wang, Xi and Tong, Yiying and Desbrun, Mathieu and Guo, Baining and Shum, Heung-Yeung},
@@ -4891,14 +4942,12 @@
   booktitle = ICCV,
   year      = {2017}
 }
-
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
   author    = {Chenyang Zhu and Kai Xu and Siddhartha Chaudhuri and Li Yi and Leonidas J. Guibas and Hao Zhang},
   year      = {2020},
   booktitle = CVPR
 }
-
 @article{Zigelman2002,
   title   = {Texture mapping using surface flattening via multidimensional scaling},
   author  = {Zigelman, Gil and Kimmel, Ron and Kiryati, Nahum},
